# tpm_roots

./: Cargo.toml  README.md  TrustedTpm.cab  build.rs  invalid_ca.cbor  ta.cbor
src/: lib.rs
tests/: validate_cas.rs
tests/examples/TrustedTPM/: setup.cmd  setup.ps1  version.txt
tests/examples/TrustedTPM/AMD/IntermediateCA/: AMD Pluton Per-Product Factory FIPS-EKICA DFID00B20F00.crt  AMD Pluton Per-Product Factory FIPS-EKICA DFID00B20F40.crt  AMD Pluton Per-Product Factory FIPS-EKICA DFID00B60F00.crt  AMD Pluton Per-Product Factory FIPS-EKICA DFID00B60F80.crt  AMD Pluton Per-Product Factory FIPS-EKICA DFID00B70F00.crt  AMD Pluton Per-Product Factory NON-FIPS-EKICA DFID00B20F00.crt  AMD Pluton Per-Product Factory NON-FIPS-EKICA DFID00B20F40.crt  AMD Pluton Per-Product Factory NON-FIPS-EKICA DFID00B60F00.crt  AMD Pluton Per-Product Factory NON-FIPS-EKICA DFID00B60F80.crt  AMD Pluton Per-Product Factory NON-FIPS-EKICA DFID00B70F00.crt  AMD-fTPM-ECC-ICA-GNRFamily-842A9A2652E452CC63DBD8FA9C218ED4.crt  AMD-fTPM-ECC-ICA-HPTFamily-F21A726D76AF588151CA619A0596D812.crt  AMD-fTPM-ECC-ICA-KRKFamily-ACEB8D2B409157C74EB2EE08CED9B645.crt  AMD-fTPM-ECC-ICA-PHX2Family-3887D9A52A04517246E45296FF1E2F8E.crt  AMD-fTPM-ECC-ICA-PHXFamily-3411EF15082F59EC465D7DEC188BB0A1.crt  AMD-fTPM-ECC-ICA-SHPFamily-EB7F6EC0482058DC50691212B414464A.crt  AMD-fTPM-ECC-ICA-STPFamily-DE88506F89845CC24D912DBA442CADCD.crt  AMD-fTPM-ECC-ICA-STXFamily-7C4760BD7AC95E2F5336A9D6028B1E10.crt  AMD-fTPM-ECC-ICA-STXHFamily-841ED9E18F875F705AFACAD1CEFAFE37.crt  AMD-fTPM-RSA-ICA-GNRFamily-FE5429C191BE55C2613A0F7DC3360E89.crt  AMD-fTPM-RSA-ICA-HPTFamily-0B7F833A00D15BEB46BA18CCE36E0244.crt  AMD-fTPM-RSA-ICA-KRKFamily-C1C1ED276EC755E277AD88C79AAE8EE7.crt  readme.txt  (+8 more)
(+1888 files in other folders)
